// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders correctly with variant default 1`] = `
<div>
  <div
    aria-describedby="default"
    class="RdsLabel-root MuiBox-root css-125klzf"
    role="label"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-sfqsx-MuiTypography-root"
    >
      LOREM IPSUM
    </span>
  </div>
</div>
`;

exports[`Label renders correctly with variant error 1`] = `
<div>
  <div
    aria-describedby="error"
    class="RdsLabel-root MuiBox-root css-hr30l5"
    role="label"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-sfqsx-MuiTypography-root"
    >
      LOREM IPSUM
    </span>
  </div>
</div>
`;

exports[`Label renders correctly with variant info 1`] = `
<div>
  <div
    aria-describedby="info"
    class="RdsLabel-root MuiBox-root css-xsokld"
    role="label"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-sfqsx-MuiTypography-root"
    >
      LOREM IPSUM
    </span>
  </div>
</div>
`;

exports[`Label renders correctly with variant primary 1`] = `
<div>
  <div
    aria-describedby="primary"
    class="RdsLabel-root MuiBox-root css-1kqxb18"
    role="label"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-sfqsx-MuiTypography-root"
    >
      LOREM IPSUM
    </span>
  </div>
</div>
`;

exports[`Label renders correctly with variant secondary 1`] = `
<div>
  <div
    aria-describedby="secondary"
    class="RdsLabel-root MuiBox-root css-akwe60"
    role="label"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-sfqsx-MuiTypography-root"
    >
      LOREM IPSUM
    </span>
  </div>
</div>
`;

exports[`Label renders correctly with variant warning 1`] = `
<div>
  <div
    aria-describedby="warning"
    class="RdsLabel-root MuiBox-root css-pe0lg2"
    role="label"
  >
    <span
      class="MuiTypography-root MuiTypography-caption css-sfqsx-MuiTypography-root"
    >
      LOREM IPSUM
    </span>
  </div>
</div>
`;
